2026-02-08T02:12:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790653660 # 871
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: next accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-07T01:45:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772000312 # 870
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: next accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-22] / []

2026-02-06T01:48:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21735654205 # 869
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-06
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 216 283 / 218 285
* notice: next accum: outdated-unq outdated-all / unq all: 217 284 / 219 286
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21] / [2026-02-02]

2026-02-05T01:45:38Z: